<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <!--<item android:id="@+id/action_test_notifications"-->
        <!--android:title="Test notifications"-->
        <!--app:showAsAction="never" />-->

    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="never"/>

    <item android:id="@+id/action_clear_done"
        android:title="@string/action_clear_done"
        app:showAsAction="never" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
