<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context="co.svbnet.tracknz.activity.AboutActivity">
    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relativeLayout">

            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:id="@+id/icon"
                android:src="@mipmap/ic_launcher" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/icon"
                android:layout_toEndOf="@+id/icon"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/app_name"
                    android:id="@+id/app_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/version_label"
                    android:layout_below="@+id/app_name"
                    android:layout_alignLeft="@+id/app_name"
                    android:layout_alignStart="@+id/app_name"
                    tools:text="version 1.3.1"/>
            </RelativeLayout>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_message"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/relativeLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginTop="25dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_review"
                android:id="@+id/review_action"
                android:gravity="left|center_vertical"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_website"
                android:id="@+id/website_action"
                android:gravity="left|center_vertical"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_credits"
                android:id="@+id/credits_action"
                android:gravity="left|center_vertical"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
